--- a/photos/gallery.html
+++ b/photos/gallery.html
@@ -10,17 +10,21 @@
     
     <div class="gallery-container">
         <div class="item">
-            <img src="https://via.placeholder.com/600x400" alt="First Photo">
+            <img src="img1.jpeg" alt="First Photo">
             <p>This is the text for the first photo.</p>
         </div>
 
         <div class="item">
-            <img src="https://via.placeholder.com/600x400" alt="Second Photo">
+            <img src="img2.jpeg" alt="Second Photo">
             <p>This text pops up with the second photo as you scroll down.</p>
         </div>
 
         <div class="item">
-            <img src="https://via.placeholder.com/600x400" alt="Third Photo">
+            <img src="img3.jpeg" alt="Third Photo">
+            <p>And here is the third one.</p>
+        </div>
+        <div class="item">
+            <img src="img4.jpeg" alt="Third Photo">
             <p>And here is the third one.</p>
         </div>
     </div>
