--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="landing-body">
-    <a href="gallery.html" class="enter-button">Click Here</a>
+    <a href="photos/gallery.html" class="enter-button">Click Here</a>
 </body>
 </html>
