--- a/photos/gallery.html
+++ b/photos/gallery.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scroll Gallery</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body class="gallery-body">
     
@@ -24,11 +24,11 @@
             <p>And here is the third one.</p>
         </div>
         <div class="item">
-            <img src="img4.jpeg" alt="Third Photo">
+            <img src="img4.jpeg" alt="Fourth Photo">
             <p>And here is the third one.</p>
         </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
