--- a/photos/gallery.html
+++ b/photos/gallery.html
@@ -27,6 +27,10 @@
             <img src="img4.jpeg" alt="Fourth Photo">
             <p>And here is the third one.</p>
         </div>
+        <div class="item">
+            <img src="img5.jpeg" alt="Fourth Photo">
+            <p>Just say the answer out loud, I am most probably on call uwu</p>
+        </div>
     </div>
 
     <script src="../script.js"></script>
