--- a/photos/gallery.html
+++ b/photos/gallery.html
@@ -28,7 +28,7 @@
             <p>And here is the third one.</p>
         </div>
         <div class="item">
-            <img src="img5.jpeg" alt="Fourth Photo">
+            <img src="img5.png" alt="Fifth Photo">
             <p>Just say the answer out loud, I am most probably on call uwu</p>
         </div>
     </div>
