--- a/photos/gallery.html
+++ b/photos/gallery.html
@@ -11,21 +11,21 @@
     <div class="gallery-container">
         <div class="item">
             <img src="img1.jpeg" alt="First Photo">
-            <p>This is the text for the first photo.</p>
+            <p>To the man I spent and keep spending hours on call with, painfully yearning and missing</p>
         </div>
 
         <div class="item">
             <img src="img2.jpeg" alt="Second Photo">
-            <p>This text pops up with the second photo as you scroll down.</p>
+            <p>To the man whose presence near me makes me feel like the whole world has come to a stop and it is just us two</p>
         </div>
 
         <div class="item">
             <img src="img3.jpeg" alt="Third Photo">
-            <p>And here is the third one.</p>
+            <p>To the kind, caring and sweet man who I almost fumbled by ranting about my campus dogs :p</p>
         </div>
         <div class="item">
             <img src="img4.jpeg" alt="Fourth Photo">
-            <p>And here is the third one.</p>
+            <p>To my hunky handsome cute ass man, who I cannot wait to meet and hug and kiss and cuddle with </p>
         </div>
         <div class="item">
             <img src="img5.png" alt="Fifth Photo">
